[tool.poetry]
name = "online-judge-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "onlinejudge"}]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.20"
lxml = "^4.2"
beautifulsoup4 = "^4.6"
colorama = "^0.4.0"
sympy = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.10"

[tool.poetry.scripts]
oj = "onlinejudge.implementation.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
